array expression place holder